    ** print/read consistency on floats is now orders of magnitude
       more likely.  (thanks also to Bruno Haible for a similar report
       and discussions)
    ** removed stack cleaning in the cleanup part of UNWIND-PROTECT.
    ** IMAGPART is specified (infelicitously) to return (* 0 <thing>)
       for objects of type REAL.  Make it so.
    ** SXHASH is specified (infelicitously) to respect similarity,
       which means that (SXHASH 0.0) must equal (SXHASH -0.0).  Make
       it so.  (thanks to Markus Ziegler)
    ** on the Alpha, the compiler succeeds in compiling functions
       returning a known number of arguments greater than 63.
    ** fixed handling of invalid NIL arguments in keyword position
       in local calls.
    ** fixed non-pretty printing of arrays with *PRINT-RADIX* being
       true.
    ** provided a readably-printable representation for RANDOM-STATE
       objects.
    ** ensured that pathnames, where they have a namestring, always
       print using #P"..." syntax.

changes in sbcl-0.8.12 relative to sbcl-0.8.11:
  * fixed bug 335: ATANH now computes the inverse hyperbolic tangent
    even for difficult arguments.  (reported by Peter Graves)

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.