@@ -2519,6 +2519,9 @@ changes in sbcl-0.8.11 relative to sbcl-0.8.10:
        print using #P"..." syntax.
 
 changes in sbcl-0.8.12 relative to sbcl-0.8.11:
+  * the behaviour of the standard function ED is now customizeable by
+    third parties through a hook variable: see ED's documentation
+    string for information on the protocol.
   * fixed bug 335: ATANH now computes the inverse hyperbolic tangent
     even for difficult arguments.  (reported by Peter Graves)
 
